# accompany

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: mlx_audio_bridge.py  mlx_server.py  voiceprint.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hooks_manager.rs  lib.rs  main.rs
src-tauri/src/agent/: client.rs  mod.rs  models.rs  prompt.rs  tts.rs
src-tauri/src/brain/: engine.rs  mod.rs  queue.rs
src-tauri/src/claude_monitor/: hook_server.rs  mod.rs  state.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/memory/: db.rs  extraction.rs  mod.rs
src-tauri/src/notifications/: github.rs
src-tauri/src/soul/: mod.rs
src/components/character/: CharacterCanvas.tsx  SpeechBubble.tsx
src/components/chat/: ChatPanel.tsx  MessageInput.tsx  MessageList.tsx
src/hooks/: useAlwaysListening.ts  useAudioPlayer.ts  useSpeechRecognition.ts
src/lib/: constants.ts  tauri.ts
src/stores/: characterStore.ts  chatStore.ts
src/styles/: globals.css
