[package]
name = "accompany"
version = "0.1.0"
edition = "2021"
description = "A desktop AI companion - your cat-girl assistant"

[lib]
name = "accompany_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
hex = "0.4"
axum = "0.8"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
